Added fragments Added Room Database

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="kb.petproject.currencyconverter2">
 
     <application
+        android:name="kb.petproject.currencyconverter2.CurrencyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
