--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,22 @@ buildscript {
     ext {
         lifecycle_version = '2.5.1'
         room_version = '2.4.3'
+        nav_version = '2.5.3'
+        kotlin_version = '1.7.10'
+    }
+    repositories {
+        google()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.0.4'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
     }
 }
+
 plugins {
     id 'com.android.application' version '7.2.0' apply false
     id 'com.android.library' version '7.2.0' apply false
